Fixed scrollbar issue.

--- a/src/main/webapp/app/assets/app.css
+++ b/src/main/webapp/app/assets/app.css
@@ -137,7 +137,7 @@ span.name {
 }
 
 .ng-isolate-scope {
-  height: 100%;
+  /*height: 100%;*/
 }
 
 md-content.md-default-theme {
